stoat/src/snapshots/stoat__test_harness__diagnostic_overlap_error_beats_hint.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x24
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m x [0m[38;2;110;213;222m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m1[0m[38;2;171;178;191m[48;2;40;44;52m;[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;224;108;117m[48;2;40;44;52m│[0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m [0m[4m[38;2;224;108;117m[48;2;40;44;52my[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;110;213;222m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m2[0m[38;2;171;178;191m[48;2;40;44;52m;[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m z [0m[38;2;110;213;222m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;198;120;221m[48;2;40;44;52m3[0m[38;2;171;178;191m[48;2;40;44;52m;[0m[38;2;250;250;250m[48;2;40;44;52m                                                                  [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m diag-overlap-error a.rs [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────────────────────────[0m[38;2;224;108;117m[48;2;99;109;131m E1 H1 [0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
