stoat/src/snapshots/stoat__test_harness__dock_minimized_overlay.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 60x10
---

                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
                                                           [0m[38;2;79;193;255m│[0m
[0m[38;2;128;128;128m[40m [scratch]                                              1:1 [0m
