stoat/src/snapshots/stoat__test_harness__dock_overlays_split_panes.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_claude
focused: #2 of 2
mode: prompt
size: 80x10
---
                                       [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m│┌──────────────────────────────────────┐[0m
                                       [0m[38;2;62;62;66m││[0m[38;2;128;128;128mClaude[0m                                [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m││[0m                                      [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m││[0m                                      [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m││[0m                                      [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m││[0m[38;2;128;128;128m--------------------------------------[0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m││[0m[7m [0m                                     [0m[38;2;62;62;66m│[0m
                                       [0m[38;2;62;62;66m│└──────────────────────────────────────┘[0m
[0m[38;2;128;128;128m[40m [scratch]                         1:1 [0m[38;2;62;62;66m│[0m[38;2;128;128;128m[40m [scratch]                          1:1 [0m
