stoat/src/snapshots/stoat__test_harness__document_highlight_read_write.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 24x4
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[4m[38;2;250;250;250m[48;2;51;56;66mfoo[0m[38;2;250;250;250m[48;2;40;44;52m bar [0m[38;2;250;250;250m[48;2;51;56;66mfoo[0m[38;2;250;250;250m[48;2;40;44;52m         [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m lsp-did-open-test [0m
